cover letter, fixes to resume

--- a/Main/cover.tex
+++ b/Main/cover.tex
@@ -52,14 +52,16 @@
 %	Comment any of the lines below if they are not required
 %-------------------------------------------------------------------------------
 \name{Taha }{Pourjalali}
-\position{Web Developer {\enskip\cdotp\enskip}Database Developer}
 %\address{246-1002, Gwangmyeongmayrouge Apt. 86, Cheongna lime-ro, Seo-gu, Incheon-si, 404-180, Rep. of KOREA}
 
-\mobile{(808)232-8467} 
-\email{taha@hawaii.edu}
-\homepage{tahahojati.github.io}
+\mobile{(808) 232-8467} 
+%%% Social
+\email{tpourjalali@gmail.com}
+\homepage{www.tpourjalali.com}
 \github{tahahojati}
 \linkedin{taha-pourjalali-2a2600b8}
+%%% Optionals
+\position{Programmer {\enskip\cdotp\enskip}Application Developer}
 % \stackoverflow{SO-id}{SO-name}
 % \twitter{@twit}
 % \skype{skype-id}
@@ -75,16 +77,16 @@
 %-------------------------------------------------------------------------------
 % The company being applied to
 \recipient
-  {College of Education: Curriculum Research \& Development Group}
-  {1776 UNIVERSITY AVE.\\ HONOLULU, HI 96822}
+  {Recipient Address Line 1}
+  {Line 2.\\ HONOLULU, HI 96822}
 % The date on the letter, default is the date of compilation
 \letterdate{\today}
 % The title of the letter
-\lettertitle{Job Application for Web and Database Developer}
+\lettertitle{Job Application for [position]}
 % How the letter is opened
-\letteropening{Dear Ms. Ching,}
+\letteropening{Dear Sir/Madam,}
 % How the letter is closed
-\letterclosing{Sincerely,}
+\letterclosing{Best,}
 % Any enclosures with the letter
 \letterenclosure[Attached]{Resume}
 
@@ -110,26 +112,28 @@
 %-------------------------------------------------------------------------------
 \begin{cvletter}
 
-It is my pleasure to submit my resume for the Web and Database Developer position. I am a physics major graduate from University of Hawaii at Manoa (UHM). Due to my interest to computer science I have been engage in learning and implementing computer programming in last four years.
 
-I first learned computer programming, C++, and web development in high school.  In my freshman and sophomore years in UHM, I worked in a bioinformatics lab as an assistant analyst. During that time, my responsibility was to design and maintain a MySQL database of genetic elements and to create a public front end for it using PHP programming language on an Apache web server. As part of my education at UHM, I took courses in Java Programing, Algorithm Analysis, and Discreet Mathematics from Computer Science Department at UHM.  Last April, I completed an online degree on Udacity.com focused on Front-End web development using HTML5, CSS3, and JavaScript. As part of this program, I was also introduced to techniques of website optimization. I have made some of my projects available on my personal portfolio website at tahahojati.github.io.
+
+It is my pleasure to submit my resume for the [position] position. I am a physics graduate and a self-taught developer and I think I may be the hire that you are looking for.  
+
+I first learned programming (C++) in high school.  Then, and in college, I was interested in the applications of computing in sciences.  In my freshman and sophomore years in UHM, I worked in a bioinformatics lab, trying to computationally date the genetic mutations in the genome of maize. During that time, I wrote numerous programs using a mix of C, Perl, and R.  That was also when I learned php in order to create a website to showcase our findings.  
+Later in my education, I used my programming knowledge to write a GUI software using C++ and Root platform for analyzing data obtained from a physics experiment.  The experiment aimed to discover dark matter; unfortunately, no luck!
+
+Since graduating in 2016, I have been working and gaining experience as a developer in several companies.  I have learned more in the last years than I initially thought was there to learn! In addition to my work experience, I have supplemented my education by taking several online courses covering many different topics including Android development, algorithm analysis, OS design, and AWS. I have also kept busy by participating in Hackathons and by completing personal projects in my free time. You can find a list of my certificates in my resume and you may view some of my projects on my website at http://tpourjalali.com.
 
 
 Thank you in advance for your consideration.
 
 
-Sincerely,
+%Dear Sir / Madam,
 
-Dear Sir / Madam,
+%Let me start by saying that I love Google and that just writing this letter excites me.   I get inspired by Google products everyday.  I was inspired by the extremely neat implementation of dependency injection in Angular and after years, I am still in awe of Google Sheets and how your company developed such a strong software using only JavaScript (as it was in 2007). 
+%I am physics graduate from the University of Hawaii.  I have not always been a developer, but I have loved programming for a long time.  I taught my self C++ from a book before graduating from high school.  In my freshman and sophomore years in UHM, I worked in a bioinformatics lab as an assistant research assistant. During that time, my responsibility was to design and maintain a MySQL database of genetic elements and to create a public front end for it using php on an Apache web server.  During my college education, I took online and on campus classes in algorithm design and analysis, machine learning, and full stack development.  Since graduating last May, I have focused on learning and adopting new development technologies including Mean stack development, Zend Framework for php and even some Ruby on Rails.   I have made some of my projects available on my portfolio at tahahojati.github.io.  If you would like to see the code for a project that is not available on Github, please contact me.  
 
-Let me start by saying that I love Google and that just writing this letter excites me.   I get inspired by Google products everyday.  I was inspired by the extremely neat implementation of dependency injection in Angular and after years, I am still in awe of Google Sheets and how your company developed such a strong software using only JavaScript (as it was in 2007). 
-I am physics graduate from the University of Hawaii.  I have not always been a developer, but I have loved programming for a long time.  I taught my self C++ from a book before graduating from high school.  In my freshman and sophomore years in UHM, I worked in a bioinformatics lab as an assistant research assistant. During that time, my responsibility was to design and maintain a MySQL database of genetic elements and to create a public front end for it using php on an Apache web server.  During my college education, I took online and on campus classes in algorithm design and analysis, machine learning, and full stack development.  Since graduating last May, I have focused on learning and adopting new development technologies including Mean stack development, Zend Framework for php and even some Ruby on Rails.   I have made some of my projects available on my portfolio at tahahojati.github.io.  If you would like to see the code for a project that is not available on Github, please contact me.  
+%Thank you for considering my application.
 
-Thank you for considering my application.
+%Sincerely,
 
-Sincerely,
-
-Taha Pourjalali
 
 \end{cvletter}
 
