--- a/Main/resume/experience.tex
+++ b/Main/resume/experience.tex
@@ -14,6 +14,7 @@
             \item {Fixed a growing queue of unresolved bugs, some over four years old.}
         \end{cvitems}
     }
+
 	\cventry
 	{Web and Database Developer}
 	{Curriculum Research and Development Group at University of Hawai`i at M{\char"101}noa}
@@ -26,6 +27,7 @@
 			\item {Used D3.js to create beautiful and responsive graphs for analyzing scientific data collected by students.}
 		\end{cvitems}
 	}
+
 	\cventry
 	{Website Administrator}
 	{First Unitarian Church of Hawaii}
@@ -36,6 +38,7 @@
 		\item {This is volunteer position. I upkeep, troubleshoot, and extend the functionality of a wordpress based website for the First Unitarian Church of Hawaii.}
 	\end{cvitems}
 	}
+
 	\cventry
 	{Front End Developer}
 	{University of Hawai`i at M{\char"101}noa}
@@ -49,6 +52,7 @@
 			%\item {Helped eight struggling students improve their grades and pass the class.}
 		\end{cvitems}
 	}
+
     \cventry
     {Web Developer}
     {Hasti LLC}
@@ -59,6 +63,7 @@
             \item {Software developer for the AASHTO LRFD project.}
         \end{cvitems}
     }
+
     \cventry
     {IT Support}
     {Kai Hawaii Structural and Forensic Engineers}
@@ -82,9 +87,10 @@
 				ROOT under the guidance of Dr. Sven Vahsen.}
 		\end{cvitems}
 	}
+
 	\cventry
-	{Department of Molecular Biosciences and Bioengineering at University of Hawai`i at M{\char"101}noa}
 	{Undergraduate Research Assistant}
+	{Department of Molecular Biosciences at University of Hawai`i at M{\char"101}noa}
 	{Honolulu, HI}
 	{2011-2013}
 	{
@@ -94,5 +100,6 @@
 			%\item {Helped eight struggling students improve their grades and pass the class.}
 		\end{cvitems}
 	}
+
 \end{cventries}
 
