--- a/Main/cover.tex
+++ b/Main/cover.tex
@@ -116,13 +116,16 @@
 
 It is my pleasure to submit my resume for the [position] position. I am a physics graduate and a self-taught developer and I think I may be the hire that you are looking for.  
 
-I first learned programming (C++) in high school.  Then, and in college, I was interested in the applications of computing in sciences.  In my freshman and sophomore years in UHM, I worked in a bioinformatics lab, trying to computationally date the genetic mutations in the genome of maize. During that time, I wrote numerous programs using a mix of C, Perl, and R.  That was also when I learned php in order to create a website to showcase our findings.  
-Later in my education, I used my programming knowledge to write a GUI software using C++ and Root platform for analyzing data obtained from a physics experiment.  The experiment aimed to discover dark matter; unfortunately, no luck!
+%I first learned programming (C++) in high school.  Then, and in
+In college, I was interested in the applications of computing in sciences.  In my freshman and sophomore years, I worked in a bioinformatics lab, trying to computationally date the genetic mutations in the genome of maize. During that time, I wrote numerous programs using a mix of C, Perl, and R.  I also learned php to create a website to showcase our findings.  
+Later, I used my programming knowledge to write a GUI software using C++ and Root platform for analyzing data gleaned from a physics experiment.  The experiment aimed to discover dark matter; unfortunately, no luck!
 
-Since graduating in 2016, I have been working and gaining experience as a developer in several companies.  I have learned more in the last years than I initially thought was there to learn! In addition to my work experience, I have supplemented my education by taking several online courses covering many different topics including Android development, algorithm analysis, OS design, and AWS. I have also kept busy by participating in Hackathons and by completing personal projects in my free time. You can find a list of my certificates in my resume and you may view some of my projects on my website at http://tpourjalali.com.
+Since graduation, I have been working and gaining experience as a developer for several companies,  
+%I have learned more in the last years than I initially thought was there to learn! %this line emphasizes my willingness to learn
+have supplemented my education by taking online courses covering Android development, algorithm analysis, OS design, and AWS. I have also kept busy by participating in Hackathons and by completing personal projects in my free time. You can find a list of my certificates in my resume and you may view some of my projects on my website at http://tpourjalali.com.
 
 
-Thank you in advance for your consideration.
+Thank you in advance for your consideration.  I look forward to talking further with you about how my background might fit your company's current needs.
 
 
 %Dear Sir / Madam,
