--- a/Main/resume/experience.tex
+++ b/Main/resume/experience.tex
@@ -7,37 +7,37 @@
     {Nov 2016 - present}
     {
         \begin{cvitems}
-            \item {Maintained and extended a complex legacy application used by bank tellers, paying attention to quality assurance of released code.}
+            \item {Maintained and extended a complex legacy application used by bank tellers, with attention to the quality assurance of released code.}
             \item {Resolved various production issues/bugs in a timely manner, maintaining a high satisfaction score.}
             \item {Maintained numerous servers using Python, Perl and Batch scripts.}
             \item {Successfully collaborated with a sizable IT team to deliver a major project.}
-            \item {Fixed a growing queue of unresolved bugs, some over four years old.}
+            \item {Fixed a long queue of unresolved software issues, some over four years old.}
         \end{cvitems}
     }
 
 	\cventry
 	{Web and Database Developer}
-	{Curriculum Research and Development Group at University of Hawai`i at M{\char"101}noa}
+	{Curriculum Research and Development Group, University of Hawai`i at M{\char"101}noa}
 	{Honolulu, HI}
 	{Apr 2016 - present}
 	{
 		\begin{cvitems}
-			\item {Designed and developed opihi.crdg.hawaii.edu from scratch using the Zend php framework, being mindful of best security practices and also accessibility of the website for handicap users.}
-			\item {Worked with non-technical clients to define software requirements and design the ideal look and feel for the website.}
+			\item {Designed and developed opihi.crdg.hawaii.edu from scratch using the Zend php framework, applying best security practices and promoting accessibility of the website for handicap users.}
+			\item {Worked with non-technical clients to define software requirements and design an ideal look and feel for the website.}
 			\item {Used D3.js to create beautiful and responsive graphs for analyzing scientific data collected by students.}
 		\end{cvitems}
 	}
 
-	\cventry
-	{Website Administrator}
-	{First Unitarian Church of Hawaii}
-	{Honolulu, HI}
-	{Jan 2018 - present}
-	{
-	\begin{cvitems}
-		\item {This is volunteer position. I upkeep, troubleshoot, and extend the functionality of a wordpress based website for the First Unitarian Church of Hawaii.}
-	\end{cvitems}
-	}
+%	\cventry
+%	{Website Administrator}
+%	{First Unitarian Church of Hawaii}
+%	{Honolulu, HI}
+%	{Jan 2018 - present}
+%	{
+%	\begin{cvitems}
+%		\item {This is volunteer position. I upkeep, troubleshoot, and extend the functionality of a wordpress based website for the First Unitarian Church of Hawaii.}
+%	\end{cvitems}
+%	}
 
 	\cventry
 	{Front End Developer}
@@ -60,7 +60,7 @@
     {June 2016 - Nov 2016}
     {
         \begin{cvitems}
-            \item {Software developer for the AASHTO LRFD project.}
+            \item {Developed a web application for AASHTO LRFD calculations (\textbf{\href{http://www.aashtobridgedesign.com}{aashtobridgedesign.com})}
         \end{cvitems}
     }
 
@@ -71,7 +71,7 @@
     {September 2016 - Nov 2016}
     {
 	    \begin{cvitems}
-		    \item{Provide general technical assistance to engineers. Perform regular server maintenance duties.}
+		    \item{Provided general technical assistance to engineers. Performed regular server maintenance duties.}
 		    \item{Worked to debug internal programs including Microsoft Outlook plug ins.}
 	    \end{cvitems}	
     }
@@ -83,20 +83,20 @@
 	{2013}
 	{
 		\begin{cvitems}
-			\item {Devised an app with graphical user interface to select, display, and graph neutron trajectories identified by a neutron detector using C++ and
-				ROOT under the guidance of Dr. Sven Vahsen.}
+			\item {Devised an app with graphical user interface to select, display and graph neutron trajectories identified by a neutron detector using C++ and
+				ROOT under the guidance of Professor Sven Vahsen.}
 		\end{cvitems}
 	}
 
 	\cventry
 	{Undergraduate Research Assistant}
-	{Department of Molecular Biosciences at University of Hawai`i at M{\char"101}noa}
+	{Department of Molecular Biosciences, University of Hawai`i at M{\char"101}noa}
 	{Honolulu, HI}
 	{2011-2013}
 	{
 		\begin{cvitems}
 			\item {Created a database of retro-transposons in Corn genome using MySQL and Perl.}
-			\item {Created a website to expose the database to public using PHP5 and Appache2.}
+			\item {Created a website to allow public access to the database using PHP5 and Appache.}
 			%\item {Helped eight struggling students improve their grades and pass the class.}
 		\end{cvitems}
 	}
