shortened experience section

--- a/Main/resume/experience.tex
+++ b/Main/resume/experience.tex
@@ -23,7 +23,7 @@
 	{
 		\begin{cvitems}
 			\item {Designed and developed opihi.crdg.hawaii.edu from scratch using the Zend php framework, applying best security practices and promoting accessibility of the website for handicap users.}
-			\item {Worked with non-technical clients to define software requirements and design an ideal look and feel for the website.}
+			%\item {Worked with non-technical clients to define software requirements and design an ideal look and feel for the website.}
 			\item {Used D3.js to create beautiful and responsive graphs for analyzing scientific data collected by students.}
 		\end{cvitems}
 	}
@@ -48,7 +48,7 @@
 		\begin{cvitems}
 			\item {Worked with Dr. Kaveh Abhari to create a vibrant data-analysis page for Stemd2.com (an educational website.)}
 			\item {Developed a preliminary front-end framework to include multiple data-enabled widgets on the page.}
-			\item {Reverse-engineered a sophisticated word-press plugin and wrote custom php code to extend its functionality.}
+			%\item {Reverse-engineered a sophisticated word-press plugin and wrote custom php code to extend its functionality.}
 			%\item {Helped eight struggling students improve their grades and pass the class.}
 		\end{cvitems}
 	}
@@ -60,7 +60,7 @@
     {June 2016 - Nov 2016}
     {
         \begin{cvitems}
-            \item {Developed a web application for AASHTO LRFD calculations (\textbf{\href{http://www.aashtobridgedesign.com}{aashtobridgedesign.com})}
+            \item {Developed a web application for AASHTO LRFD calculations with Node and Angular(\textbf{\href{http://www.aashtobridgedesign.com}{aashtobridgedesign.com})}
         \end{cvitems}
     }
 
@@ -72,7 +72,7 @@
     {
 	    \begin{cvitems}
 		    \item{Provided general technical assistance to engineers. Performed regular server maintenance duties.}
-		    \item{Worked to debug internal programs including Microsoft Outlook plug ins.}
+		    \item{Worked to debug internal programs including onboard logic for a survey robot.}
 	    \end{cvitems}	
     }
 	
@@ -83,7 +83,7 @@
 	{2013}
 	{
 		\begin{cvitems}
-			\item {Devised an app with graphical user interface to select, display and graph neutron trajectories identified by a neutron detector using C++ and
+			\item {Developed a GUI application to select, display and graph neutron trajectories identified by a neutron detector using C++ and
 				ROOT under the guidance of Professor Sven Vahsen.}
 		\end{cvitems}
 	}
@@ -96,7 +96,7 @@
 	{
 		\begin{cvitems}
 			\item {Created a database of retro-transposons in Corn genome using MySQL and Perl.}
-			\item {Created a website to allow public access to the database using PHP5 and Appache.}
+			\item {Created a website to allow public access to the database using PHP and Appache.}
 			%\item {Helped eight struggling students improve their grades and pass the class.}
 		\end{cvitems}
 	}
