changed successfully to 1 page!

--- a/Main/resume/education.tex
+++ b/Main/resume/education.tex
@@ -1,4 +1,4 @@
-\cvsection{Credentials}
+\cvsection{Education}
 \begin{cventries}
 	\cventry
 	{B.S. in Physics}
@@ -6,25 +6,19 @@
 	{Honolulu, HI}
 	{2011 - 2016}
 	{
-	  \begin{cvitems}
-	    \item {Membership in the Society of Physics Students and the Golden Key Honor Society.}
-	  \end{cvitems}
+	  % \begin{cvitems}
+	  %   \item {Membership in the Society of Physics Students and the Golden Key Honor Society.}
+	  % \end{cvitems}
 	}
 	\cventry
 	{Nanodegree in Android Development with Grow with Google Scholarship}
 	{Udacity.com}
 	{Honolulu, HI}
 	{2018 (Ongoing)}
-	{I was one of the recipients of the Grow with Google scholarship for Android Development curriculum on Udacity.com.}  
+	{}  
 	\cventry
 	{Certificate in Full Stack Development from the Hong Kong University of Science and Technology}
 	{Coursera.com}
-	{Honolulu, HI}
-	{2016}
-	{}  
-	\cventry
-	{Nanodegree in Front-End Development}
-	{Udacity.com}
 	{Honolulu, HI}
 	{2016}
 	{}    
