--- a/Main/resume.tex
+++ b/Main/resume.tex
@@ -90,9 +90,10 @@
 %%% Import contents
 \import{\sectiondir}{skills.tex}
 \import{\sectiondir}{experience.tex}
-\import{\sectiondir}{projects.tex}
-\import{\sectiondir}{honors.tex}
 \import{\sectiondir}{education.tex}
+\pagebreak %honors heading is showing at the bottom of the page
+\import{\sectiondir}{honors.tex}
+\import{\sectiondir}{projects.tex}
 %\import{\sectiondir}{extracurricular.tex}
 %\import{\sectiondir}{honors.tex}
 %\import{\sectiondir}{presentation.tex}
