--- a/Main/resume/experience.tex
+++ b/Main/resume/experience.tex
@@ -60,21 +60,21 @@
     {June 2016 - Nov 2016}
     {
         \begin{cvitems}
-            \item {Developed a web application for AASHTO LRFD calculations with Node and Angular(\textbf{\href{http://www.aashtobridgedesign.com}{aashtobridgedesign.com})}
+            \item {Developed a web application for AASHTO LRFD calculations with Node and Angular(\textbf{\href{http://www.aashtobridgedesign.com}{aashtobridgedesign.com}})}
         \end{cvitems}
     }
 
-    \cventry
-    {IT Support}
-    {Kai Hawaii Structural and Forensic Engineers}
-    {Honolulu, HI}
-    {September 2016 - Nov 2016}
-    {
-	    \begin{cvitems}
-		    \item{Provided general technical assistance to engineers. Performed regular server maintenance duties.}
-		    \item{Worked to debug internal programs including onboard logic for a survey robot.}
-	    \end{cvitems}	
-    }
+    % \cventry
+    % {IT Support}
+    % {Kai Hawaii Structural and Forensic Engineers}
+    % {Honolulu, HI}
+    % {September 2016 - Nov 2016}
+    % {
+	%     \begin{cvitems}
+	% 	    \item{Provided general technical assistance to engineers. Performed regular server maintenance duties.}
+	% 	    \item{Worked to debug internal programs including onboard logic for a survey robot.}
+	%     \end{cvitems}	
+    % }
 	
 	\cventry
 	{Directed Studies Under Dr. Vahsen}
