--- a/Main/resume/projects.tex
+++ b/Main/resume/projects.tex
@@ -5,12 +5,12 @@
 \begin{cventries}
 	
 	\cventry
-	{\faLaptop\enspace Online Developer Portfolio}
+	{\faLaptop\faAndroid\enspace Developer Portfolio}
 	{}
 	{}
 	{}
-	{My developer pages (at \textbf{\href{http://www.tpourjalali.com}{tpourjalali.com}} and \textbf{\href{https://tahahojati.github.io}{ tahahojati.github.io}}) were developed using Vue.js and Angular.js. }
-	
+	{My developer pages (at \textbf{\href{http://www.tpourjalali.com}{tpourjalali.com}} and \textbf{\href{https://tahahojati.github.io}{ tahahojati.github.io}}) were developed using Vue.js, Angular.js and Android SDK.}
+
 	\cventry
 	{\faLaptop \enspace OPIHI: Our Project in Hawaii's Intertidal}
 	{}
@@ -18,6 +18,13 @@
 	{}
 	{A science education web application. Developed with Zend Framework and LAMP stack}
 	
+	\cventry
+	{\faAndroid\enspace Reflex Game}
+	{}
+	{}
+	{}
+	{A fast paced game developed using only Android SDK. APK available for download on my github and on my portfolio.}
+
 	\cventry
 	{\faLaptop\enspace AASHTO LRFD DESIGN Online Software}
 	{}
@@ -90,13 +97,7 @@
 	{}
 	{}
 	{Single page application accompanied by a hybrid mobile app for a fictitious restaurant. Developed with Express, Angular and Ionic.}
-	
-	% \cventry
-	% {\faAndroid\enspace Reflex Game}
-	% {}
-	% {}
-	% {}
-	% {}
+
 	
 	\cventry
 	{\faAndroid\enspace Photo Gallery}
