changes based on Marsha's review

--- a/Main/cover.tex
+++ b/Main/cover.tex
@@ -122,7 +122,7 @@ Later, I used my programming knowledge to write a GUI software using C++ and Roo
 
 Since graduation, I have been working and gaining experience as a developer for several companies,  
 %I have learned more in the last years than I initially thought was there to learn! %this line emphasizes my willingness to learn
-have supplemented my education by taking online courses covering Android development, algorithm analysis, OS design, and AWS. I have also kept busy by participating in Hackathons and by completing personal projects in my free time. You can find a list of my certificates in my resume and you may view some of my projects on my website at http://tpourjalali.com.
+have supplemented my education by taking online courses covering Android development, algorithm analysis, OS design, and AWS. I have also challenged myself by participating in Hackathons and by completing personal projects in my free time. You can find a list of my certificates in my resume and you may view some of my projects on my website at \textbf{\href{http://www.tpourjalali.com}{tpourjalali.com}}.
 
 
 Thank you in advance for your consideration.  I look forward to talking further with you about how my background might fit your company's current needs.
