--- a/Main/resume/education.tex
+++ b/Main/resume/education.tex
@@ -1,5 +1,6 @@
 \cvsection{Credentials}
 \begin{cventries}
+
 	\cventry
 	{B.S. in Physics}
 	{University of Hawai`i at M{\char"101}noa}
@@ -10,18 +11,21 @@
 	    \item {Membership in the Society of Physics Students and the Golden Key Honor Society.}
 	  \end{cvitems}
 	}
+
 	\cventry
-	{Nanodegree in Android Development with Grow with Google Scholarship}
+	{Nanodegree in Android Development with "Grow with Google" Scholarship}
 	{Udacity.com}
 	{Honolulu, HI}
 	{2018 (Ongoing)}
-	{I was one of the recipients of the Grow with Google scholarship for Android Development curriculum on Udacity.com.}  
+	{Received scholarship for Android Development curriculum on Udacity.com.}  
+
 	\cventry
-	{Certificate in Full Stack Development from the Hong Kong University of Science and Technology}
+	{Certificate in Full-Stack Development from the Hong Kong University of Science and Technology}
 	{Coursera.com}
 	{Honolulu, HI}
 	{2016}
 	{}  
+	
 	\cventry
 	{Nanodegree in Front-End Development}
 	{Udacity.com}
