--- a/Main/resume/experience.tex
+++ b/Main/resume/experience.tex
@@ -22,7 +22,7 @@
 	{Apr 2016 - present}
 	{
 		\begin{cvitems}
-			\item {Designed and developed opihi.crdg.hawaii.edu from scratch using the Zend php framework, applying best security practices and promoting accessibility of the website for handicap users.}
+			\item {Designed and developed opihi.crdg.hawaii.edu using the Zend php framework, applying best security practices and promoting accessibility of the website for handicap users. Opihi is a research project relying on data gathered by public to study the intertidal regions of Hawaii}
 			%\item {Worked with non-technical clients to define software requirements and design an ideal look and feel for the website.}
 			\item {Used D3.js to create beautiful and responsive graphs for analyzing scientific data collected by students.}
 		\end{cvitems}
@@ -46,7 +46,7 @@
 	{Oct 2016 - Mar 2017}
 	{
 		\begin{cvitems}
-			\item {Worked with Dr. Kaveh Abhari to create a vibrant data-analysis page for Stemd2.com (an educational website.)}
+			\item {Worked with Professor Kaveh Abhari to create a vibrant data-analysis page for Stemd2.com (an educational website).}
 			\item {Developed a preliminary front-end framework to include multiple data-enabled widgets on the page.}
 			%\item {Reverse-engineered a sophisticated word-press plugin and wrote custom php code to extend its functionality.}
 			%\item {Helped eight struggling students improve their grades and pass the class.}
@@ -60,7 +60,7 @@
     {June 2016 - Nov 2016}
     {
         \begin{cvitems}
-            \item {Developed a web application for AASHTO LRFD calculations with Node and Angular(\textbf{\href{http://www.aashtobridgedesign.com}{aashtobridgedesign.com}})}
+            \item {Developed a web application for AASHTO LRFD (i.e. bridge design) calculations with Node and Angular(\textbf{\href{http://www.aashtobridgedesign.com}{aashtobridgedesign.com}})}
         \end{cvitems}
     }
 
@@ -83,7 +83,7 @@
 	{2013}
 	{
 		\begin{cvitems}
-			\item {Developed a GUI application to select, display and graph neutron trajectories identified by a neutron detector using C++ and
+			\item {Developed an application to select, display and graph neutron trajectories identified by a neutron detector using C++ and
 				ROOT under the guidance of Professor Sven Vahsen.}
 		\end{cvitems}
 	}
@@ -95,8 +95,9 @@
 	{2011-2013}
 	{
 		\begin{cvitems}
-			\item {Created a database of retro-transposons in Corn genome using MySQL and Perl.}
-			\item {Created a website to allow public access to the database using PHP and Appache.}
+			\item{Contributed to a two year long bioinfomatics research project and won an award for presenting the project at a research symposium.}
+			\item {Created a database of retro-transposons present in the corn genome using MySQL and Perl.}
+			\item {Created a website to allow public access to the database using PHP and Apache.}
 			%\item {Helped eight struggling students improve their grades and pass the class.}
 		\end{cvitems}
 	}
