--- a/Main/resume/honors.tex
+++ b/Main/resume/honors.tex
@@ -2,13 +2,13 @@
 %\cvsubsection{International}
 \begin{cvhonors}
 	\cvhonor
-		{Hawaii Agriculture Hackathon (Agathon)}
-	    {Second place winner}
+		{Hawaii Agriculture Hackathon (Second Place)}
+	    {Developed an Android app to help teach immigrant laborers about the standards of farming in Hawaii.}
 	    {Honolulu, HI}
 	    {2018}  
 	\cvhonor
-		{AT\&T Hackathon (Hawaii)}
-	    {Best IoT Project}
+		{AT\&T Hackathon (Best IoT Project)}
+	    {Built a cloud connected device to monitor farms and prevent theft by notifying farm owners and scaring away potential assailants.}
 	    {Honolulu, HI}
 	    {2018}
 \end{cvhonors}
