--- a/Main/resume/projects.tex
+++ b/Main/resume/projects.tex
@@ -1,7 +1,7 @@
 %some fa icons to use: faAndroid faDesktop faChrome faLaptop faWrench faTrophy
 \cvsection{Projects}
 
-	Find links and more detailed description of my projects on my online portfolio at \mbox{\href{http://www.tpourjalali.com}{www.tpourjalali.com}}.
+	Please find links and detailed description of my projects on my portfolio at \mbox{\href{http://www.tpourjalali.com}{www.tpourjalali.com}}.
 \begin{cventries}
 	
 	\cventry
@@ -12,18 +12,18 @@
 	{My developer pages (at \textbf{\href{http://www.tpourjalali.com}{tpourjalali.com}} and \textbf{\href{https://tahahojati.github.io}{ tahahojati.github.io}}) were developed using Vue.js, Angular.js and Android SDK.}
 
 	\cventry
-	{\faLaptop \enspace OPIHI: Our Project in Hawaii's Intertidal}
+	{\faLaptop \enspace OPIHI: Our Project in Hawaii's Intertidal Region}
 	{}
 	{}
 	{}
-	{A science education web application. Developed with Zend Framework and LAMP stack}
+	{A science education web application, developed with Zend Framework and LAMP stack}
 	
 	\cventry
 	{\faAndroid\enspace Reflex Game}
 	{}
 	{}
 	{}
-	{A fast paced game developed using only Android SDK. APK available for download on my github and on my portfolio.}
+	{A fast paced game developed using only Android SDK. APK available for download on my \textbf{\href{https://github.com/tahahojati/ReflexGame}{github}} and on my portfolio.}
 
 	\cventry
 	{\faLaptop\enspace AASHTO LRFD DESIGN Online Software}
@@ -38,14 +38,14 @@
 	{}
 	{}
 	{}
-	{Android app that shows you popular movies along with trailers and reviews.  Favorite the ones you like and share with friends! }
+	{Android app that shows popular movies along with trailers and reviews.  Users may rate and share the movies as they like. }
 	
-	\cventry
-	{\faAndroid\enspace Criminal Intent}
-	{}
-	{}
-	{}
-	{Co-workers leaving dirty dishes in the breakroom sink? leaving shared printer without paper? Record their crimes using this app!}
+	% \cventry
+	% {\faAndroid\enspace Criminal Intent}
+	% {}
+	% {}
+	% {}
+	% {Co-workers leaving dirty dishes in the breakroom sink? leaving shared printer without paper? Record their crimes using this app!}
 
 	% \cventry
 	% {\faAndroid\enspace Vue Stock Trader}
@@ -66,7 +66,7 @@
 	{}
 	{}
 	{}
-	{Winner in Hawaii Agriculture Hackathon 2018. An Android app to educate ESL immigrants about the standards of farming.}
+	{Winner in Hawaii Agriculture Hackathon 2018. An Android app to educate ESL immigrants about Hawaii's standards of farming.}
 
 %virtual pet, farm animals, frogger
 	\cventry
@@ -77,11 +77,19 @@
 	{Set of browser games developed with vanilla JavaScript and with Phaser.io. Look for them on my online portflio.}
 	
 	\cventry
+	{\faAndroid \faLaptop\enspace Ristorante con Fusion
+	}
+	{}
+	{}
+	{}
+	{Single page application accompanied by a hybrid mobile app for a fictitious restaurant. Developed with Express, Angular and Ionic.}
+
+	\cventry
 	{\faAndroid\enspace Sandwich Club}
 	{}
 	{}
 	{}
-	{An Android app to help you find and prepare Sandwiches}
+	{An Android app to help one find and prepare sandwiches}
 			
 	% \cventry
 	% {\faAndroid\enspace Portfolio}
@@ -90,13 +98,6 @@
 	% {}
 	% {}
 	
-	\cventry
-	{\faAndroid \faLaptop\enspace Ristorante con Fusion
-	}
-	{}
-	{}
-	{}
-	{Single page application accompanied by a hybrid mobile app for a fictitious restaurant. Developed with Express, Angular and Ionic.}
 
 	
 	\cventry
@@ -104,21 +105,21 @@
 	{}
 	{}
 	{}
-	{An android client for the photo-sharing site Flickr.}
+	{An Android client for the photo-sharing site Flickr.}
 	
 	\cventry
 	{\faAndroid\enspace Beat Box}
 	{}
 	{}
 	{}
-	{A box for beating up people!(jk) Beat Box is an Android app for generating musical sounds.}
+	{An Android app for generating musical sounds.}
 		
-	\cventry
-	{\faAndroid\enspace Nerd Launcher}
-	{}
-	{}
-	{}
-	{A simple app to replace the default Android Launcher (Home screen)}
+	% \cventry
+	% {\faAndroid\enspace Nerd Launcher}
+	% {}
+	% {}
+	% {}
+	% {A simple app to replace the default Android Launcher (Home screen)}
 		
 	% \cventry
 	% {\faAndroid\enspace Geo Quiz}
