--- a/Main/resume.tex
+++ b/Main/resume.tex
@@ -88,10 +88,11 @@
 
 
 %%% Import contents
+\import{\sectiondir}{objective.tex}
 \import{\sectiondir}{skills.tex}
 \import{\sectiondir}{experience.tex}
 \import{\sectiondir}{education.tex}
-\pagebreak %honors heading is showing at the bottom of the page
+% \pagebreak %honors heading is showing at the bottom of the page
 \import{\sectiondir}{honors.tex}
 \import{\sectiondir}{projects.tex}
 %\import{\sectiondir}{extracurricular.tex}
