minor grammar fixes

--- a/Main/resume/experience.tex
+++ b/Main/resume/experience.tex
@@ -7,10 +7,10 @@
     {Nov 2016 - present}
     {
         \begin{cvitems}
-            \item {Maintained and extended a complex legacy application used by bank tellers, with attention to the quality assurance of released code.}
-            \item {Resolved various production issues/bugs in a timely manner, maintaining a high satisfaction score.}
-            \item {Maintained numerous servers using Python, Perl and Batch scripts.}
-            \item {Successfully collaborated with a sizable IT team to deliver a major project.}
+            \item {Maintain and extend a complex legacy application used by bank tellers, with attention to the quality assurance of released code.}
+            \item {Resolve various production issues/bugs in a timely manner, maintaining a high satisfaction score.}
+            \item {Maintain numerous servers using Python, Perl and Batch scripts.}
+            \item {Successfully collaborate with a sizable IT team to deliver major projects.}
             \item {Fixed a long queue of unresolved software issues, some over four years old.}
         \end{cvitems}
     }
@@ -22,7 +22,7 @@
 	{Apr 2016 - present}
 	{
 		\begin{cvitems}
-			\item {Designed and developed opihi.crdg.hawaii.edu using the Zend php framework, applying best security practices and promoting accessibility of the website for handicap users. Opihi is a research project relying on data gathered by public to study the intertidal regions of Hawaii}
+			\item {Designed and developed opihi.crdg.hawaii.edu using the Zend php framework, applying best security practices and promoting accessibility of the website for handicapped users. Opihi is a research project relying on data gathered by public to study the intertidal regions of Hawaii}
 			%\item {Worked with non-technical clients to define software requirements and design an ideal look and feel for the website.}
 			\item {Used D3.js to create beautiful and responsive graphs for analyzing scientific data collected by students.}
 		\end{cvitems}
